--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -54,5 +54,18 @@
     <string name="title_section_tutorial_dashboard_home">Tutorial dari Budgetku</string>
     <string name="title_section_article_dashboard_home">Yang Menarik di Budgetku</string>
     <string name="text_button_show_challenge_card_challenge_budgeting">Lihat Tantangan</string>
+    <string name="text_message_information_category_dashboard_budget">"Kamu belum punya kategori pengeluaran, bikin transaksi dulu untuk bisa liat pengeluaran "</string>
+    <string name="text_button_add_transaction_dashboard_budget">Tambah Transaksi disini</string>
+    <string name="title_section_category_expenses_dashboard_budget">Kategori Pengeluaran</string>
+    <string name="text_message_tips_and_tricks_dashboard_budget">Coba deh buat budget dulu biar Budgetku bisa tau kebiasaan pengeluaran kamu.</string>
+    <string name="text_button_create_budget_dashboard_budget">Buat Budget</string>
+    <string name="text_title_no_budget_dashboard_budget">Kamu Belum Punya Budget</string>
+    <string name="text_title_remaining_budget_dashboard_budget">Sisa Budget</string>
+    <string name="text_label_usage_category_budget">%1$s dari budget</string>
+    <string name="text_tips_budget_success_first">Anggaran kamu aman! Kamu bisa pakai</string>
+    <string name="text_tips_budget_success_end">/hari untuk bulan ini</string>
+    <string name="text_label_usage_percentage_summary_budget">%1$s terpakai</string>
+    <string name="text_label_usage_summary_budget">Terpakai %1$s</string>
+    <string name="text_button_edit_summary_budget">Edit</string>
     <!--    end dashboard-->
 </resources>
