--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -201,5 +201,18 @@
     <string name="subtitle_error_password_not_identical_change_password">Password harus sama dengan password baru</string>
     <string name="subtitle_error_password_empty_change_password">Password tidak boleh kosong</string>
     <string name="subtitle_error_password_length_change_password">Password harus 8 karakter atau lebih</string>
+    <string name="text_title_delete_confirmation_transaction">Yakin hapus transaski ini?</string>
+    <string name="text_message_delete_confirmation_transaction">Data transaksi yang telah kamu isi akan hilang dari catatan transaksi kamu</string>
+    <string name="text_button_confirm_delete_transaction">Hapus</string>
+    <string name="text_button_cancel_delete_transaction">Batal</string>
+    <string name="text_title_label_detail_transaction">Rincian Transaksi</string>
+    <string name="text_label_account_source_detail_transaction">Sumber akun</string>
+    <string name="text_label_transaction_date_detail_transaction">Tanggal Transaksi</string>
+    <string name="text_label_transaction_category_detail_transaction">Kategory</string>
+    <string name="text_label_transaction_type_detail_transaction">Jenis</string>
+    <string name="text_label_total_amount_detail_transaction">Total</string>
+    <string name="text_button_share_transaction_detail_transaction">Bagikan Transaksi ini</string>
+    <string name="text_button_detele_transaction_detail_transaction">Hapus Transaksi</string>
+    <string name="text_title_detail_transaction">Detail Transaksi</string>
     <!--    end change password-->
 </resources>
