--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -33,10 +33,11 @@
     <string name="text_button_confirmation_gender_bottom_sheet">Pilih</string>
 
     <string name="text_input_pin">Masukkan PIN</string>
+    <string name="label_forgotpin_inputpin">Lupa PIN?</string>
     <string name="text_create_pin">Buat kode PIN kamu</string>
     <string name="title_create_pin_success">PIN Berhasil dibuat</string>
     <string name="subtitle_create_pin_success">Gunakan catat keuangan kamu lebih aman dan mudah dengan Budgetku!</string>
-    <string name="label_forgotpin_inputpin">Lupa PIN?</string>
+    <string name="button_success_pin">Oke</string>
     <string name="text_button_numpad_1">1</string>
     <string name="text_button_numpad_2">2</string>
     <string name="text_button_numpad_3">3</string>
