--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -201,5 +201,9 @@
     <string name="subtitle_error_password_not_identical_change_password">Password harus sama dengan password baru</string>
     <string name="subtitle_error_password_empty_change_password">Password tidak boleh kosong</string>
     <string name="subtitle_error_password_length_change_password">Password harus 8 karakter atau lebih</string>
+    <string name="text_title_dashboard_community">Komunitas</string>
+    <string name="text_tab_feed">Feeds</string>
+    <string name="text_tab_article">Article</string>
+    <string name="text_tab_academy">Academy</string>
     <!--    end change password-->
 </resources>
