--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="text_button_signup_with_google_screen_auth">Daftar Dengan Google</string>
     <string name="text_button_signin_with_facebook_screen_auth">Masuk Dengan Facebook</string>
     <string name="text_button_signup_with_facebook_screen_auth">Daftar Dengan Facebook</string>
+    <string name="text_button_signup_with_email_screen_auth">Daftar</string>
+
     <string name="text_button_login_screen_auth">Masuk</string>
     <string name="text_button_register_screen_auth">Daftar</string>
     <string name="text_and_screen_auth">dan</string>
