--- a/feature/feature-authentication/src/main/res/values/strings.xml
+++ b/feature/feature-authentication/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
 
 <resources>
     <string name="text_open_email">Buka Email</string>
+    <string name="text_input_fullname_error_complete_profile">Nama lengkap min. 3-70 karakter.</string>
+    <string name="text_input_password_error_complete_profile">Password harus memiliki setidaknya 8 karakter</string>
+    <string name="text_input_confirm_password_error_complete_profile">Password tidak sesuai</string>
+    <string name="text_input_password_error_reset_password">Password harus memiliki setidaknya 8 karakter</string>
+    <string name="text_input_confirm_password_error_reset_password">Password tidak sesuai</string>
 </resources>
