--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -94,4 +94,14 @@
     <string name="description_icon_error">Ikon error</string>
     <string name="description_icon_success">Ikon sukses</string>
     <!--    end alert component-->
+
+    <!--    bottom navigation-->
+    <string name="text_label_nav_report_dashboard">Laporan</string>
+    <string name="text_label_nav_home_dashboard">Home</string>
+    <string name="text_label_nav_task_dashboard">Tugas</string>
+    <string name="text_label_nav_project_dashboard">Proyek</string>
+    <string name="text_label_nav_profile_dashboard">Profil</string>
+    <!--    end navigation-->
+
+
 </resources>
