--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -94,4 +94,9 @@
     <string name="description_icon_error">Ikon error</string>
     <string name="description_icon_success">Ikon sukses</string>
     <!--    end alert component-->
+    <!--    bottom sheet component-->
+    <string name="text_upload_image_from_phone">Upload foto baru dari ponsel</string>
+    <string name="text_take_picture">Ambil Gambar</string>
+    <string name="text_delete_image">Hapus Gambar</string>
+    <!--   end bottom sheet component-->
 </resources>
