--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -95,22 +95,30 @@
     <string name="description_icon_success">Ikon sukses</string>
     <!--    end alert component-->
 
-    <!--    bottom sheet component-->
+    <!--    bottom sheet edit profile component-->
     <string name="text_upload_image_from_phone">Upload foto baru dari ponsel</string>
     <string name="text_take_picture">Ambil Gambar</string>
     <string name="text_delete_image">Hapus Gambar</string>
-    <!--   end bottom sheet component-->
+    <!--   end bottom sheet edit profile component-->
+
+    <!--    bottom sheet date picker-->
+    <string name="text_start">Mulai</string>
+    <string name="btn_text_choose">Pilih</string>
+    <!--   end bottom sheet date picker-->
   
     <!--    search component-->
     <string name="text_placeholder_search_bar">Cari tugas atau proyek Anda</string>
     <!--    end search component-->
+
     <!--    text description-->
     <string name="text_label_input_description">Deskripsi</string>
     <string name="text_placeholder_input_description">Tulis deskripsi Anda di sini...</string>
     <!--    end alert component-->
+
     <!--    notif profile-->
     <string name="text_label_notif_profile">Profil berhasil diperbarui</string>
     <!--    end alert component-->
+
     <!--    changepassword-->
     <string name="text_label_change_password_profile">Ubah Password</string>
     <string name="text_subtitle_change_password">Untuk lanjut mengubah, masukan password akun anda saat ini </string>
