--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -136,6 +136,7 @@
     <string name="description_icon_arrow">Arrow Back</string>
     <string name="description_icon_pencil">pencil</string>
     <string name="text_label_input_new_name_edit_profile">Nama Pengguna</string>
+    <string name="text_top_bar_edit_profile">Edit Profile</string>
     <string name="text_label_placeholder_new_name_edit_profile">Masukan Nama Pengguna</string>
     <!-- end edit profil  -->
 </resources>
