--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -123,4 +123,9 @@
     <string name="text_label_nav_project_dashboard">Proyek</string>
     <string name="text_label_nav_profile_dashboard">Profil</string>
     <!--    end navigation-->
+    <!--    text description-->
+    <string name="text_placeholder_search_list_task">Cari nama tugas atau nama proyek Anda</string>
+    <!--    end alert component-->
+
+
 </resources>
