--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
     <string name="text_label_nav_project_dashboard">Proyek</string>
     <string name="text_label_nav_profile_dashboard">Profil</string>
     <!--    end navigation-->
-  
+
     <!--    text description-->
     <string name="text_placeholder_search_list_task">Cari nama tugas atau nama proyek Anda</string>
     <string name="text_title_empty_list_task">Tidak ada hasil yang ditemukan</string>
@@ -150,4 +150,8 @@
     <string name="text_button_save_change_edit_profile">Simpan Perubahan</string>
     <string name="text_label_placeholder_new_name_edit_profile">Masukan Nama Pengguna</string>
     <!-- end edit profil  -->
+
+    <!--  logout  -->
+    <string name="text_button_logout">Keluar</string>
+    <!--  end logout  -->
 </resources>
